tests/ui/feature-gates/feature-gate-mixed-utf8-literals.rs
fn main() {
    _ = b"aÂ¥ğŸ¦€"; //~ ERROR mixed utf8
    _ = br"aÂ¥ğŸ¦€"; //~ ERROR mixed utf8
    _ = b"a\u{a5}\u{1f980}"; //~ ERROR mixed utf8
}
